--- a/homepage.html
+++ b/homepage.html
@@ -8,12 +8,15 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Kode+Mono:wght@400..700&family=Lekton:ital,wght@0,400;0,700;1,400&family=Overpass:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Kode+Mono:wght@400..700&family=Lekton:ital,wght@0,400;0,700;1,400&family=Overpass:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="javascript.js"></script>
@@ -23,7 +26,8 @@
 <body>
 
     <div class="container">
-        <div class="nameTitle" style="cursor:pointer" onclick="unshowBox()"><i><</i>Stefany Rachor Junges<i>></i></div>
+        <div class="nameTitle" style="cursor:pointer" onclick="unshowBox()"><i>
+                << /i>Stefany Rachor Junges<i>></i></div>
 
         <div class="menu">
             <menuItem><button onclick="showAboutMe()">About me</button></menuItem>
@@ -37,10 +41,10 @@
 
         <div class="box"></div>
 
-</div>
+    </div>
 
-<div id="myModal" class="modal">
-            <div class="modal-content">
+    <div id="myModal" class="modal">
+        <div class="modal-content">
             <span class="close">&times;</span>
         </div>
 
