--- a/homepage.html
+++ b/homepage.html
@@ -26,8 +26,8 @@
 <body>
 
     <div class="container">
-        <div class="nameTitle" style="cursor:pointer" onclick="unshowBox()"><i>
-                << /i>Stefany Rachor Junges<i>></i></div>
+        <div class="nameTitle" style="cursor:pointer" onclick="unshowBox()">
+                <i><</i>Stefany Rachor Junges<i>></i></div>
 
         <div class="menu">
             <menuItem><button onclick="showAboutMe()">About me</button></menuItem>
