Resized menu font

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <menuItem><button onclick="showProjects()">Projects</button></menuItem>
         </div>
 
-        <div class="runText">JAVA <i>WEB DESIGN </i>MYSQL SOFTWARE DEVELOPMENT <i>EMPOWERMENT</i></div>
+        <div class="runText">JAVA <i>WEB DESIGN </i>MYSQL <i>SOFTWARE DEVELOPMENT</i> EMPOWERMENT</div>
 
         <div class="box"></div>
 
