Added meta and icon

--- a/index.html
+++ b/index.html
@@ -6,17 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stefany Rachor Junges | Java | Web Development | And more!</title>
 
+    <meta name="description" content="Interactive CV of Stefany Rachor Junges – Java developer and web enthusiast. Learn more about my skills, experience, projects, and contact information.">
+    <meta name="keywords" content="Stefany Rachor Junges, interactive CV, resume, Java developer, web developer, portfolio, frontend, backend, software engineer, full stack, HTML, CSS, JavaScript, Java">
+    <meta name="author" content="Stefany Rachor Junges">
+
+    <meta property="og:title" content="Stefany Rachor Junges | Java & Web Developer | Interactive CV">
+    <meta property="og:description" content="Explore my interactive CV showcasing my skills in Java and web development. Projects, experience, and contact info all in one place.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sjunges.vercel.app/">
+    <meta property="og:image" content="https://sjunges.vercel.app/website-preview.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Stefany Rachor Junges | Java & Web Developer">
+    <meta name="twitter:description" content="Check out my interactive resume with all my projects, skills, and contact details.">
+    <meta name="twitter:image" content="https://sjunges.vercel.app/website-preview.png">
+
+    <link rel="icon" href="images/icon.ico" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Kode+Mono:wght@400..700&family=Lekton:ital,wght@0,400;0,700;1,400&family=Overpass:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Kode+Mono:wght@400..700&family=Lekton:ital,wght@0,400;0,700;1,400&family=Overpass:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="javascript.js" defer></script>
@@ -24,7 +38,6 @@
 </head>
 
 <body>
-
     <div class="container">
         <div class="nameTitle" style="cursor:pointer" onclick="unshowBox()">
                 <i><</i>Stefany Rachor Junges<i>></i></div>
